Actualización de carga de datos

--- a/Taller_Grupal_Grupo_2.ipynb
+++ b/Taller_Grupal_Grupo_2.ipynb
@@ -1,80 +1,54 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [
-        "UuQr4u5RQT4l",
-        "ke3TY8E1QkCg",
-        "KVCqofHKRVxp"
-      ]
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Matricula de educación superior 2021**"
-      ],
       "metadata": {
         "id": "dwyz6jkxT-15"
-      }
+      },
+      "source": [
+        "# **Matricula de educación superior 2021**"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Objetivos:"
-      ],
       "metadata": {
         "id": "bDWXW90cUHNn"
-      }
+      },
+      "source": [
+        "## Objetivos:"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## TALLER"
-      ],
       "metadata": {
         "id": "YjIwdec0U9p8"
-      }
+      },
+      "source": [
+        "## TALLER"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "La siguiente base de datos contiene información de estudiantes pertenecientes a un Instituto Profesional. Con el fin de tomar decisiones institucionales, como reforzar asignaturas o rediseñar horarios se registraron datos sobre su rendimiento académico, género, jornada y número de asignaturas reprobadas.\n",
-        "\n",
-        "Para responder las siguientes preguntas, descarga la base de datos **<a href=\"https://drive.google.com/uc?export=download&id=1Z2mrhxQnGgEfMqKrPyXBBPLnFPg52Woz\n",
-        "\">aquí</a>**."
-      ],
       "metadata": {
         "id": "iixvThDnKc7q"
-      }
+      },
+      "source": [
+        "Base de datos a usar **<a href=\"https://drive.google.com/uc?export=download&id=1Z2mrhxQnGgEfMqKrPyXBBPLnFPg52Woz\n",
+        "\">aquí</a>**."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "1. Defina la población y muestra."
-      ],
       "metadata": {
         "id": "PJHxWHRatuCN"
-      }
+      },
+      "source": [
+        "1. Defina la población y muestra."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "df_matricula = pd.read_excel(\"/content/02_MATRICULAS_ED_SUPERIOR_TARAPACA_2021.xlsx\")\n",
-        "muestra_matricula = df_matricula.shape[0] #La definimos para usarla en cálculos después\n",
-        "print(f'La muestra es de:', muestra_matricula)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -82,16 +56,79 @@
         "id": "qb1voI4OCKRf",
         "outputId": "713bb8de-34d4-4f25-f713-75502277ba57"
       },
+      "outputs": [],
+      "source": [
+        "###Sólo se debe usar desde el colab\n",
+        "\n",
+        "import pandas as pd\n",
+        "df_matricula = pd.read_excel(\"/content/02_MATRICULAS_ED_SUPERIOR_TARAPACA_2021.xlsx\")\n",
+        "muestra_matricula = df_matricula.shape[0] #La definimos para usarla en cálculos después\n",
+        "print(f'La muestra es de:', muestra_matricula)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "La muestra es de: 15459\n"
+            "La muestra es de: 239523\n"
           ]
         }
+      ],
+      "source": [
+        "###Este se usa para Visual Studio Code, recordar installar en terminal lo siguiente:\n",
+        "\n",
+        "#pip install pandas\n",
+        "#pip install numpy\n",
+        "#pip install matplotlib\n",
+        "#pip install seaborn\n",
+        "#pip install openpyxl\n",
+        "\n",
+        "\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Ruta al archivo (con r'' para que no dé error con las barras de Windows)\n",
+        "ruta = r\"C:\\Users\\GAMER\\Desktop\\Taller_Grupal_Grupo_2\\07_MATRICULAS_ED_SUPERIOR_METROPOLITANA_2021_SANTIAGO.xlsx\"\n",
+        "\n",
+        "# Leer archivo Excel\n",
+        "df_matricula = pd.read_excel(ruta)\n",
+        "\n",
+        "# Definir tamaño de la muestra\n",
+        "muestra_matricula = df_matricula.shape[0]\n",
+        "print(f\"La muestra es de: {muestra_matricula}\")\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [
+        "UuQr4u5RQT4l",
+        "ke3TY8E1QkCg",
+        "KVCqofHKRVxp"
+      ],
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.7"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
