Caso de estudio

--- a/Taller_Grupal_Grupo_2.ipynb
+++ b/Taller_Grupal_Grupo_2.ipynb
@@ -12,19 +12,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bDWXW90cUHNn"
+        "id": "YjIwdec0U9p8"
       },
       "source": [
-        "## Objetivos:"
+        "# TALLER"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "YjIwdec0U9p8"
-      },
+      "metadata": {},
       "source": [
-        "## TALLER"
+        "## Parte I – Introducción y descripción general de los datos"
       ]
     },
     {
@@ -33,6 +31,57 @@
         "id": "iixvThDnKc7q"
       },
       "source": [
+        "### 1. Caso de estudio\n",
+        "\n",
+        "- Breve descripción de la base de datos\n",
+        "\n",
+        "# Trabajo Práctico: Estadística Descriptiva\n",
+        "\n",
+        "## Caso de Estudio\n",
+        "\n",
+        "**Registro de Matrícula de Educación Superior en Chile, 2021**\n",
+        "\n",
+        "El Ministerio de Educación de Chile (MINEDUC), a través del Servicio de Información de Educación Superior (SIES), recopila anualmente información sobre la matrícula de estudiantes de educación superior a nivel nacional. \n",
+        "\n",
+        "**El objetivo** de este registro es caracterizar la matrícula según variables demográficas, académicas, institucionales, económicas y geográficas. Para este trabajo, se considerará un subconjunto de la base correspondiente a estudiantes matriculados en instituciones con sede en la **Región Metropolitana de Santiago**.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Variables del Registro\n",
+        "\n",
+        "| Variable | Descripción |\n",
+        "|----------|-------------|\n",
+        "| **ID** | Identificador del matriculado |\n",
+        "| **GENERO** | Género del estudiante |\n",
+        "| **EDAD** | Edad del estudiante |\n",
+        "| **RANGO EDAD** | Rango de edad al que pertenece el estudiante |\n",
+        "| **AÑO INGRESO** | Año de ingreso a primer año |\n",
+        "| **SEMESTRE INGRESO** | Semestre de ingreso a la carrera |\n",
+        "| **TIPO DE INSTITUCION** | Clasificación de la institución (Universidades CRUCH, privadas, IP, CFT) |\n",
+        "| **NOMBRE DE INSTITUCION** | Nombre completo de la institución |\n",
+        "| **ACREDITACION INSTITUCIONAL** | Situación de acreditación al 30 de abril del año en proceso |\n",
+        "| **PERIODO DE ACREDITACION** | Fecha de inicio y término de la acreditación institucional |\n",
+        "| **AÑOS DE ACREDITACION** | Duración en años de la acreditación de la institución |\n",
+        "| **NOMBRE CARRERA** | Nombre completo de la carrera o programa |\n",
+        "| **REQUISITO INGRESO** | Requisito específico para ingresar a la carrera |\n",
+        "| **VIA DE INGRESO** | Forma de ingreso a la carrera o programa |\n",
+        "| **MODALIDAD** | Modo en que se imparte la carrera (presencial, online, híbrida) |\n",
+        "| **JORNADA** | Jornada en que se imparte la carrera (diurna, vespertina, mixta) |\n",
+        "| **TIPO PLAN CARRERA** | Tipo de plan de estudios de la carrera |\n",
+        "| **NIVEL DE ESTUDIO CARRERA** | Clasificación global del nivel de estudios |\n",
+        "| **NIVEL CARRERA** | Clasificación específica del nivel de estudios |\n",
+        "| **AREA CONOCIMIENTO** | Categorización CINE-UNESCO de la carrera |\n",
+        "| **DURACION PLAN DE ESTUDIO (SEM)** | Duración de la carrera en semestres (sin titulación) |\n",
+        "| **DURACION PROCESO TITULACION (SEM)** | Duración del proceso de titulación en semestres |\n",
+        "| **DURACION TOTAL CARRERA (SEM)** | Duración total de la carrera incluyendo titulación |\n",
+        "| **VALOR MATRICULA (PESOS)** | Valor de la matrícula en pesos |\n",
+        "| **VALOR ARANCEL (PESOS)** | Arancel anual de la carrera |\n",
+        "| **REGION SEDE** | Región donde se imparte la carrera |\n",
+        "| **PROVINCIA SEDE** | Provincia de la sede |\n",
+        "| **COMUNA SEDE** | Comuna donde se encuentra la sede |\n",
+        "\n",
+        "- Origen de los datos y contexto del tema que representan.\n",
+        "\n",
         "Base de datos a usar **<a href=\"https://drive.google.com/uc?export=download&id=1Z2mrhxQnGgEfMqKrPyXBBPLnFPg52Woz\n",
         "\">aquí</a>**."
       ]
