Cambio de detalle del número de grupo

--- a/Taller_Grupal_Grupo_7.ipynb
+++ b/Taller_Grupal_Grupo_7.ipynb
@@ -3,19 +3,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dwyz6jkxT-15"
+        "id": "YjIwdec0U9p8"
       },
       "source": [
-        "# **Matricula de educación superior 2021**"
+        "# TALLER N° 1 ESTADISTICA DESCRIPTIVA_002D"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YjIwdec0U9p8"
+        "id": "dwyz6jkxT-15"
       },
       "source": [
-        "# TALLER"
+        "# **Matricula de educación superior 2021**"
       ]
     },
     {
