--- a/Taller_Grupal_Grupo_7.ipynb
+++ b/Taller_Grupal_Grupo_7.ipynb
@@ -6,16 +6,15 @@
         "id": "YjIwdec0U9p8"
       },
       "source": [
-        "# TALLER N° 1 ESTADISTICA DESCRIPTIVA_002D"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "dwyz6jkxT-15"
-      },
-      "source": [
-        "# **Matricula de educación superior 2021**"
+        "# **TALLER N° 1 ESTADISTICA DESCRIPTIVA_002D**\n",
+        "\n",
+        "## **Matricula de educación superior 2021 - Santiago**\n",
+        "\n",
+        "**Equipo:**\n",
+        "\n",
+        "- ARACELY ESCOBAR\n",
+        "- BENJAMIN GONZALEZ\n",
+        "- SOLGREY MEDINA"
       ]
     },
     {
@@ -31,13 +30,11 @@
         "id": "iixvThDnKc7q"
       },
       "source": [
-        "### 1. Caso de estudio\n",
+        "## 1. Caso de estudio\n",
         "\n",
-        "- Breve descripción de la base de datos\n",
+        "### 1.1 Breve descripción de la base de datos\n",
         "\n",
-        "# Trabajo Práctico: Estadística Descriptiva\n",
-        "\n",
-        "## Caso de Estudio\n",
+        "**Caso de Estudio**\n",
         "\n",
         "**Registro de Matrícula de Educación Superior en Chile, 2021**\n",
         "\n",
@@ -78,12 +75,7 @@
         "| **VALOR ARANCEL (PESOS)** | Arancel anual de la carrera |\n",
         "| **REGION SEDE** | Región donde se imparte la carrera |\n",
         "| **PROVINCIA SEDE** | Provincia de la sede |\n",
-        "| **COMUNA SEDE** | Comuna donde se encuentra la sede |\n",
-        "\n",
-        "- Origen de los datos y contexto del tema que representan.\n",
-        "\n",
-        "Base de datos a usar **<a href=\"https://drive.google.com/uc?export=download&id=1Z2mrhxQnGgEfMqKrPyXBBPLnFPg52Woz\n",
-        "\">aquí</a>**."
+        "| **COMUNA SEDE** | Comuna donde se encuentra la sede |"
       ]
     },
     {
@@ -92,7 +84,12 @@
         "id": "PJHxWHRatuCN"
       },
       "source": [
-        "1. Defina la población y muestra."
+        "1. **Defina la población y muestra.**\n",
+        "\n",
+        "- Origen de los datos y contexto del tema que representan.\n",
+        "\n",
+        "Base de datos a usar **<a href=\"https://drive.google.com/uc?export=download&id=1Z2mrhxQnGgEfMqKrPyXBBPLnFPg52Woz\n",
+        "\">aquí</a>**."
       ]
     },
     {
@@ -117,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -141,14 +138,266 @@
         "import pandas as pd\n",
         "\n",
         "# Ruta al archivo (con r'' para que no dé error con las barras de Windows)\n",
-        "ruta = r\"C:\\Users\\GAMER\\Desktop\\Taller_Grupal_Grupo_2\\07_MATRICULAS_ED_SUPERIOR_METROPOLITANA_2021_SANTIAGO.xlsx\"\n",
+        "ruta = r\"C:\\Users\\GAMER\\Desktop\\Taller_Grupal_Grupo_7\\07_MATRICULAS_ED_SUPERIOR_METROPOLITANA_2021_SANTIAGO.xlsx\"\n",
         "\n",
-        "# Leer archivo Excel\n",
         "df_matricula = pd.read_excel(ruta)\n",
         "\n",
-        "# Definir tamaño de la muestra\n",
+        "# Muestra de la matricula\n",
         "muestra_matricula = df_matricula.shape[0]\n",
         "print(f\"La muestra es de: {muestra_matricula}\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "La **población** corresponde a los **estudiantes de Educación Superior en Santiago durante el periodo de 2021**\n",
+        "\n",
+        "La **muestra** es de 239.523 **estudiantes de Educación Superior en Santiago durante el periodo de 2021**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ID</th>\n",
+              "      <th>GENERO</th>\n",
+              "      <th>EDAD</th>\n",
+              "      <th>RANGO EDAD</th>\n",
+              "      <th>AÑO INGRESO</th>\n",
+              "      <th>SEMESTRE INGRESO</th>\n",
+              "      <th>TIPO DE INSTITUCION</th>\n",
+              "      <th>NOMBRE DE INSTITUCION</th>\n",
+              "      <th>ACREDITACION INSTITUCIONAL</th>\n",
+              "      <th>PERIODO DE ACREDITACION</th>\n",
+              "      <th>...</th>\n",
+              "      <th>NIVEL CARRERA</th>\n",
+              "      <th>AREA CONOCIMIENTO</th>\n",
+              "      <th>DURACION PLAN DE ESTUDIO (SEMESTRES)</th>\n",
+              "      <th>DURACION PROCESO TITULACION (SEMESTRES)</th>\n",
+              "      <th>DURACION TOTAL CARRERA (SEMESTRES)</th>\n",
+              "      <th>VALOR MATRICULA (PESOS)</th>\n",
+              "      <th>VALOR ARANCEL (PESOS)</th>\n",
+              "      <th>REGION SEDE</th>\n",
+              "      <th>PROVINCIA SEDE</th>\n",
+              "      <th>COMUNA SEDE</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>3</td>\n",
+              "      <td>Femenino</td>\n",
+              "      <td>31</td>\n",
+              "      <td>30 a 34</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>Primer semestre</td>\n",
+              "      <td>Universidades CRUCH</td>\n",
+              "      <td>UNIVERSIDAD DE CHILE</td>\n",
+              "      <td>ACREDITADA</td>\n",
+              "      <td>22/12/2018 AL 22/12/2025</td>\n",
+              "      <td>...</td>\n",
+              "      <td>Doctorado</td>\n",
+              "      <td>Ciencias Sociales</td>\n",
+              "      <td>8</td>\n",
+              "      <td>0</td>\n",
+              "      <td>8</td>\n",
+              "      <td>149000</td>\n",
+              "      <td>3527000</td>\n",
+              "      <td>Metropolitana</td>\n",
+              "      <td>Santiago</td>\n",
+              "      <td>Santiago</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>4</td>\n",
+              "      <td>Femenino</td>\n",
+              "      <td>19</td>\n",
+              "      <td>15 a 19</td>\n",
+              "      <td>2021</td>\n",
+              "      <td>Primer semestre</td>\n",
+              "      <td>Institutos Profesionales</td>\n",
+              "      <td>IP DUOC UC</td>\n",
+              "      <td>ACREDITADA</td>\n",
+              "      <td>26/08/2017 AL 26/08/2024</td>\n",
+              "      <td>...</td>\n",
+              "      <td>Carreras Tecnicas</td>\n",
+              "      <td>Administracion y Comercio</td>\n",
+              "      <td>5</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5</td>\n",
+              "      <td>194000</td>\n",
+              "      <td>2510000</td>\n",
+              "      <td>Metropolitana</td>\n",
+              "      <td>Santiago</td>\n",
+              "      <td>Santiago</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>9</td>\n",
+              "      <td>Femenino</td>\n",
+              "      <td>25</td>\n",
+              "      <td>25 a 29</td>\n",
+              "      <td>2016</td>\n",
+              "      <td>Primer semestre</td>\n",
+              "      <td>Universidades CRUCH</td>\n",
+              "      <td>UNIVERSIDAD ALBERTO HURTADO</td>\n",
+              "      <td>ACREDITADA</td>\n",
+              "      <td>18/12/2019 AL 18/12/2023</td>\n",
+              "      <td>...</td>\n",
+              "      <td>Carreras Profesionales</td>\n",
+              "      <td>Ciencias Sociales</td>\n",
+              "      <td>10</td>\n",
+              "      <td>1</td>\n",
+              "      <td>10</td>\n",
+              "      <td>261000</td>\n",
+              "      <td>4378000</td>\n",
+              "      <td>Metropolitana</td>\n",
+              "      <td>Santiago</td>\n",
+              "      <td>Santiago</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>11</td>\n",
+              "      <td>Femenino</td>\n",
+              "      <td>24</td>\n",
+              "      <td>20 a 24</td>\n",
+              "      <td>2017</td>\n",
+              "      <td>Primer semestre</td>\n",
+              "      <td>Universidades CRUCH</td>\n",
+              "      <td>UNIVERSIDAD DIEGO PORTALES</td>\n",
+              "      <td>ACREDITADA</td>\n",
+              "      <td>24/10/2018 AL 24/10/2023</td>\n",
+              "      <td>...</td>\n",
+              "      <td>Carreras Profesionales</td>\n",
+              "      <td>Salud</td>\n",
+              "      <td>10</td>\n",
+              "      <td>0</td>\n",
+              "      <td>10</td>\n",
+              "      <td>469000</td>\n",
+              "      <td>4672000</td>\n",
+              "      <td>Metropolitana</td>\n",
+              "      <td>Santiago</td>\n",
+              "      <td>Santiago</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>24</td>\n",
+              "      <td>Femenino</td>\n",
+              "      <td>23</td>\n",
+              "      <td>20 a 24</td>\n",
+              "      <td>2021</td>\n",
+              "      <td>Primer semestre</td>\n",
+              "      <td>Institutos Profesionales</td>\n",
+              "      <td>IP AIEP</td>\n",
+              "      <td>ACREDITADA</td>\n",
+              "      <td>22/10/2017 AL 22/10/2022</td>\n",
+              "      <td>...</td>\n",
+              "      <td>Carreras Profesionales</td>\n",
+              "      <td>Arte y Arquitectura</td>\n",
+              "      <td>8</td>\n",
+              "      <td>1</td>\n",
+              "      <td>8</td>\n",
+              "      <td>190000</td>\n",
+              "      <td>2230000</td>\n",
+              "      <td>Metropolitana</td>\n",
+              "      <td>Santiago</td>\n",
+              "      <td>Santiago</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5 rows × 28 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   ID    GENERO  EDAD RANGO EDAD  AÑO INGRESO SEMESTRE INGRESO  \\\n",
+              "0   3  Femenino    31   30 a 34          2020  Primer semestre   \n",
+              "1   4  Femenino    19   15 a 19          2021  Primer semestre   \n",
+              "2   9  Femenino    25   25 a 29          2016  Primer semestre   \n",
+              "3  11  Femenino    24   20 a 24          2017  Primer semestre   \n",
+              "4  24  Femenino    23   20 a 24          2021  Primer semestre   \n",
+              "\n",
+              "        TIPO DE INSTITUCION        NOMBRE DE INSTITUCION  \\\n",
+              "0       Universidades CRUCH         UNIVERSIDAD DE CHILE   \n",
+              "1  Institutos Profesionales                   IP DUOC UC   \n",
+              "2       Universidades CRUCH  UNIVERSIDAD ALBERTO HURTADO   \n",
+              "3       Universidades CRUCH   UNIVERSIDAD DIEGO PORTALES   \n",
+              "4  Institutos Profesionales                      IP AIEP   \n",
+              "\n",
+              "  ACREDITACION INSTITUCIONAL   PERIODO DE ACREDITACION  ...  \\\n",
+              "0                 ACREDITADA  22/12/2018 AL 22/12/2025  ...   \n",
+              "1                 ACREDITADA  26/08/2017 AL 26/08/2024  ...   \n",
+              "2                 ACREDITADA  18/12/2019 AL 18/12/2023  ...   \n",
+              "3                 ACREDITADA  24/10/2018 AL 24/10/2023  ...   \n",
+              "4                 ACREDITADA  22/10/2017 AL 22/10/2022  ...   \n",
+              "\n",
+              "            NIVEL CARRERA          AREA CONOCIMIENTO  \\\n",
+              "0               Doctorado          Ciencias Sociales   \n",
+              "1       Carreras Tecnicas  Administracion y Comercio   \n",
+              "2  Carreras Profesionales          Ciencias Sociales   \n",
+              "3  Carreras Profesionales                      Salud   \n",
+              "4  Carreras Profesionales        Arte y Arquitectura   \n",
+              "\n",
+              "  DURACION PLAN DE ESTUDIO (SEMESTRES)  \\\n",
+              "0                                    8   \n",
+              "1                                    5   \n",
+              "2                                   10   \n",
+              "3                                   10   \n",
+              "4                                    8   \n",
+              "\n",
+              "  DURACION PROCESO TITULACION (SEMESTRES) DURACION TOTAL CARRERA (SEMESTRES)  \\\n",
+              "0                                       0                                  8   \n",
+              "1                                       1                                  5   \n",
+              "2                                       1                                 10   \n",
+              "3                                       0                                 10   \n",
+              "4                                       1                                  8   \n",
+              "\n",
+              "  VALOR MATRICULA (PESOS) VALOR ARANCEL (PESOS)    REGION SEDE PROVINCIA SEDE  \\\n",
+              "0                  149000               3527000  Metropolitana       Santiago   \n",
+              "1                  194000               2510000  Metropolitana       Santiago   \n",
+              "2                  261000               4378000  Metropolitana       Santiago   \n",
+              "3                  469000               4672000  Metropolitana       Santiago   \n",
+              "4                  190000               2230000  Metropolitana       Santiago   \n",
+              "\n",
+              "  COMUNA SEDE  \n",
+              "0    Santiago  \n",
+              "1    Santiago  \n",
+              "2    Santiago  \n",
+              "3    Santiago  \n",
+              "4    Santiago  \n",
+              "\n",
+              "[5 rows x 28 columns]"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_matricula.head(5)"
       ]
     }
   ],
