Correción para ejecutar el colab

--- a/Taller_Grupal_Grupo_7.ipynb
+++ b/Taller_Grupal_Grupo_7.ipynb
@@ -107,7 +107,7 @@
         "###Sólo se debe usar desde el colab\n",
         "\n",
         "import pandas as pd\n",
-        "df_matricula = pd.read_excel(\"/content/02_MATRICULAS_ED_SUPERIOR_TARAPACA_2021.xlsx\")\n",
+        "df_matricula = pd.read_excel(\"\") #Agregar la base de datos aquí\n",
         "muestra_matricula = df_matricula.shape[0] #La definimos para usarla en cálculos después\n",
         "print(f'La muestra es de:', muestra_matricula)"
       ]
