--- a/Taller_Grupal_Grupo_7.ipynb
+++ b/Taller_Grupal_Grupo_7.ipynb
@@ -6,22 +6,47 @@
         "id": "YjIwdec0U9p8"
       },
       "source": [
+        "<br>\n",
+        "<br>\n",
+        "\n",
         "# **TALLER N° 1 ESTADISTICA DESCRIPTIVA_002D**\n",
         "\n",
-        "## **Matricula de educación superior 2021 - Santiago**\n",
+        "<br>\n",
+        "<br>\n",
+        "<br>\n",
+        "\n",
+        "### **Matricula de educación superior 2021 - Santiago**\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "---\n",
         "\n",
         "**Equipo:**\n",
         "\n",
         "- ARACELY ESCOBAR\n",
         "- BENJAMIN GONZALEZ\n",
-        "- SOLGREY MEDINA"
+        "- SOLGREY MEDINA\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "---\n",
+        "\n",
+        "<br>\n",
+        "<br>\n",
+        "<br>\n",
+        "<br>\n",
+        "<br>\n",
+        "<br>\n",
+        "<br>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Parte I – Introducción y descripción general de los datos"
+        "# **Parte I – Introducción y descripción general de los datos**\n",
+        "\n",
+        "---"
       ]
     },
     {
@@ -30,9 +55,9 @@
         "id": "iixvThDnKc7q"
       },
       "source": [
-        "## 1. Caso de estudio\n",
+        "## **1. Caso de estudio**\n",
         "\n",
-        "### 1.1 Breve descripción de la base de datos\n",
+        "### Breve descripción de la base de datos\n",
         "\n",
         "**Caso de Estudio**\n",
         "\n",
@@ -84,9 +109,11 @@
         "id": "PJHxWHRatuCN"
       },
       "source": [
-        "1. **Defina la población y muestra.**\n",
+        "## **2. Población y muestra**\n",
         "\n",
-        "- Origen de los datos y contexto del tema que representan.\n",
+        "---\n",
+        "\n",
+        "Origen de los datos y contexto del tema que representan.\n",
         "\n",
         "Base de datos a usar **<a href=\"https://drive.google.com/uc?export=download&id=1Z2mrhxQnGgEfMqKrPyXBBPLnFPg52Woz\n",
         "\">aquí</a>**."
@@ -398,6 +425,67 @@
       ],
       "source": [
         "df_matricula.head(5)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## **3. Clasificación de variables**\n",
+        "\n",
+        "---\n",
+        "\n",
+        "- Identificación de las variables más relevantes.\n",
+        "- Clasificación en:\n",
+        "  - **Cualitativas**: nominales / ordinales.\n",
+        "  - **Cuantitativas**: discretas / continuas."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# **Parte II – Análisis univariado**\n",
+        "\n",
+        "## **4. Tablas de frecuencia**\n",
+        "\n",
+        "- Tablas de frecuencia absoluta, relativa y acumulada (para variables cualitativas).\n",
+        "- Gráficos asociados (barras, circulares).\n",
+        "\n",
+        "## **5. Medidas de posición**\n",
+        "- Media, mediana y moda (para variables cuantitativas).\n",
+        "- Percentiles y cuartiles (Q1, Q2, Q3, P90, etc.).\n",
+        "- Breve comentario interpretando qué significan estos valores en el contexto.\n",
+        "\n",
+        "## **6. Representaciones gráficas**\n",
+        "- Histogramas (para visualizar distribución de variables numéricas).\n",
+        "- Diagramas de caja (boxplots) para mostrar cuartiles y detectar valores atípicos."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# **Parte III – Análisis de dispersión y conclusiones**\n",
+        "\n",
+        "## **7. Medidas de dispersión**\n",
+        "- Cálculo de:\n",
+        "  - Rango.\n",
+        "  - Varianza.\n",
+        "  - Desviación estándar.\n",
+        "  - (Opcional) Coeficiente de variación.\n",
+        "- Interpretación: ¿qué tan dispersos están los datos?\n",
+        "\n",
+        "## **8. Síntesis gráfica comparativa**\n",
+        "- Seleccionar 2–3 gráficos clave que resuman hallazgos.\n",
+        "- Ejemplo: comparación de una variable numérica segmentada por categorías.\n",
+        "\n",
+        "## **9. Conclusiones descriptivas**\n",
+        "- Resumen de hallazgos principales:\n",
+        "  - Variables con mayor concentración.\n",
+        "  - Variables con más variabilidad.\n",
+        "  - Patrones o sesgos encontrados.\n",
+        "- Observaciones finales y relevancia de los resultados."
       ]
     }
   ],
