--- a/Taller_Grupal_Grupo_7.ipynb
+++ b/Taller_Grupal_Grupo_7.ipynb
@@ -37,7 +37,9 @@
         "<br>\n",
         "<br>\n",
         "<br>\n",
-        "<br>"
+        "<br>\n",
+        "\n",
+        "---"
       ]
     },
     {
@@ -141,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -185,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -418,7 +420,7 @@
               "[5 rows x 28 columns]"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -445,13 +447,133 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# **Parte II – Análisis univariado**\n",
-        "\n",
+        "# **Parte II – Análisis univariado**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## **4. Tablas de frecuencia**\n",
         "\n",
         "- Tablas de frecuencia absoluta, relativa y acumulada (para variables cualitativas).\n",
-        "- Gráficos asociados (barras, circulares).\n",
         "\n",
+        "**Investigar y responder las siguientes preguntas. Justificar claramente.**\n",
+        "\n",
+        "* a ¿Hay áreas del conocimiento donde las carreras sean más caras? Expliquen qué criterio diseñaron para responder la pregunta.\n",
+        "* b. ¿Qué influencia tiene la edad en el tipo de institución a la que ingresan los estudiantes?\n",
+        "* c. ¿Hay carreras cuyo arancel sea sustantivamente más caro que la mayoría de los aranceles? ¿Qué explicación pueden encontrar? Consideren qué variables de la base de datos los puede ayudar y el contexto de la región que les tocó trabajar.\n",
+        "\n",
+        "- Gráficos asociados (barras, circulares)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 239523 entries, 0 to 239522\n",
+            "Data columns (total 28 columns):\n",
+            " #   Column                                   Non-Null Count   Dtype  \n",
+            "---  ------                                   --------------   -----  \n",
+            " 0   ID                                       239523 non-null  int64  \n",
+            " 1   GENERO                                   239523 non-null  object \n",
+            " 2   EDAD                                     239523 non-null  int64  \n",
+            " 3   RANGO EDAD                               239523 non-null  object \n",
+            " 4   AÑO INGRESO                              239523 non-null  int64  \n",
+            " 5   SEMESTRE INGRESO                         239523 non-null  object \n",
+            " 6   TIPO DE INSTITUCION                      239523 non-null  object \n",
+            " 7   NOMBRE DE INSTITUCION                    239523 non-null  object \n",
+            " 8   ACREDITACION INSTITUCIONAL               239523 non-null  object \n",
+            " 9   PERIODO DE ACREDITACION                  230561 non-null  object \n",
+            " 10  AÑOS DE ACREDITACION                     230561 non-null  float64\n",
+            " 11  NOMBRE CARRERA                           239523 non-null  object \n",
+            " 12  REQUISITO INGRESO                        239523 non-null  object \n",
+            " 13  VIA DE INGRESO                           239523 non-null  object \n",
+            " 14  MODALIDAD                                239523 non-null  object \n",
+            " 15  JORNADA                                  239523 non-null  object \n",
+            " 16  TIPO PLAN CARRERA                        239523 non-null  object \n",
+            " 17  NIVEL DE ESTUDIO CARRERA                 239523 non-null  object \n",
+            " 18  NIVEL CARRERA                            239523 non-null  object \n",
+            " 19  AREA CONOCIMIENTO                        239523 non-null  object \n",
+            " 20  DURACION PLAN DE ESTUDIO (SEMESTRES)     239523 non-null  int64  \n",
+            " 21  DURACION PROCESO TITULACION (SEMESTRES)  239523 non-null  int64  \n",
+            " 22  DURACION TOTAL CARRERA (SEMESTRES)       239523 non-null  int64  \n",
+            " 23  VALOR MATRICULA (PESOS)                  239523 non-null  int64  \n",
+            " 24  VALOR ARANCEL (PESOS)                    239523 non-null  int64  \n",
+            " 25  REGION SEDE                              239523 non-null  object \n",
+            " 26  PROVINCIA SEDE                           239523 non-null  object \n",
+            " 27  COMUNA SEDE                              239523 non-null  object \n",
+            "dtypes: float64(1), int64(8), object(19)\n",
+            "memory usage: 51.2+ MB\n"
+          ]
+        }
+      ],
+      "source": [
+        "df_matricula.info()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "AREA CONOCIMIENTO\n",
+              "Administracion y Comercio    50449\n",
+              "Salud                        48938\n",
+              "Tecnologia                   35955\n",
+              "Ciencias Sociales            34304\n",
+              "Educacion                    26148\n",
+              "Arte y Arquitectura          15631\n",
+              "Derecho                      14423\n",
+              "Ciencias Basicas              5529\n",
+              "Agropecuaria                  5422\n",
+              "Humanidades                   2724\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "conteo_area = df_matricula['AREA CONOCIMIENTO'].value_counts()\n",
+        "\n",
+        "conteo_area"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El área de conocimiento más común es: Administracion y Comercio\n"
+          ]
+        }
+      ],
+      "source": [
+        "area_conocimiento_frecuente = df_matricula.groupby('AREA CONOCIMIENTO').size()\n",
+        "\n",
+        "print(f'El área de conocimiento más común es: {area_conocimiento_frecuente.idxmax()}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## **5. Medidas de posición**\n",
         "- Media, mediana y moda (para variables cuantitativas).\n",
         "- Percentiles y cuartiles (Q1, Q2, Q3, P90, etc.).\n",
