--- a/Taller_Grupal_Grupo_7.ipynb
+++ b/Taller_Grupal_Grupo_7.ipynb
@@ -469,60 +469,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 239523 entries, 0 to 239522\n",
-            "Data columns (total 28 columns):\n",
-            " #   Column                                   Non-Null Count   Dtype  \n",
-            "---  ------                                   --------------   -----  \n",
-            " 0   ID                                       239523 non-null  int64  \n",
-            " 1   GENERO                                   239523 non-null  object \n",
-            " 2   EDAD                                     239523 non-null  int64  \n",
-            " 3   RANGO EDAD                               239523 non-null  object \n",
-            " 4   AÑO INGRESO                              239523 non-null  int64  \n",
-            " 5   SEMESTRE INGRESO                         239523 non-null  object \n",
-            " 6   TIPO DE INSTITUCION                      239523 non-null  object \n",
-            " 7   NOMBRE DE INSTITUCION                    239523 non-null  object \n",
-            " 8   ACREDITACION INSTITUCIONAL               239523 non-null  object \n",
-            " 9   PERIODO DE ACREDITACION                  230561 non-null  object \n",
-            " 10  AÑOS DE ACREDITACION                     230561 non-null  float64\n",
-            " 11  NOMBRE CARRERA                           239523 non-null  object \n",
-            " 12  REQUISITO INGRESO                        239523 non-null  object \n",
-            " 13  VIA DE INGRESO                           239523 non-null  object \n",
-            " 14  MODALIDAD                                239523 non-null  object \n",
-            " 15  JORNADA                                  239523 non-null  object \n",
-            " 16  TIPO PLAN CARRERA                        239523 non-null  object \n",
-            " 17  NIVEL DE ESTUDIO CARRERA                 239523 non-null  object \n",
-            " 18  NIVEL CARRERA                            239523 non-null  object \n",
-            " 19  AREA CONOCIMIENTO                        239523 non-null  object \n",
-            " 20  DURACION PLAN DE ESTUDIO (SEMESTRES)     239523 non-null  int64  \n",
-            " 21  DURACION PROCESO TITULACION (SEMESTRES)  239523 non-null  int64  \n",
-            " 22  DURACION TOTAL CARRERA (SEMESTRES)       239523 non-null  int64  \n",
-            " 23  VALOR MATRICULA (PESOS)                  239523 non-null  int64  \n",
-            " 24  VALOR ARANCEL (PESOS)                    239523 non-null  int64  \n",
-            " 25  REGION SEDE                              239523 non-null  object \n",
-            " 26  PROVINCIA SEDE                           239523 non-null  object \n",
-            " 27  COMUNA SEDE                              239523 non-null  object \n",
-            "dtypes: float64(1), int64(8), object(19)\n",
-            "memory usage: 51.2+ MB\n"
+            "\n",
+            "LAS ÁREAS DE CONOCIMIENTO Y SUS INSCRITOS SON:\n",
+            "\n"
           ]
-        }
-      ],
-      "source": [
-        "df_matricula.info()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {},
-      "outputs": [
+        },
         {
           "data": {
             "text/plain": [
@@ -540,12 +498,18 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
+        "print('\\n\n",
+        "      \n",
+        "      \n",
+        "      \n",
+        "      LAS ÁREAS DE CONOCIMIENTO Y SUS INSCRITOS SON:\\n')\n",
+        "\n",
         "conteo_area = df_matricula['AREA CONOCIMIENTO'].value_counts()\n",
         "\n",
         "conteo_area"
@@ -568,6 +532,96 @@
         "area_conocimiento_frecuente = df_matricula.groupby('AREA CONOCIMIENTO').size()\n",
         "\n",
         "print(f'El área de conocimiento más común es: {area_conocimiento_frecuente.idxmax()}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>fi</th>\n",
+              "      <th>hi</th>\n",
+              "      <th>Fi</th>\n",
+              "      <th>Hi</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Intervalos</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>(-1400.01, 700000.0]</th>\n",
+              "      <td>238030</td>\n",
+              "      <td>99.376678</td>\n",
+              "      <td>238030</td>\n",
+              "      <td>99.376678</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>(700000.0, 1400000.0]</th>\n",
+              "      <td>1493</td>\n",
+              "      <td>0.623322</td>\n",
+              "      <td>239523</td>\n",
+              "      <td>100.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                           fi         hi      Fi          Hi\n",
+              "Intervalos                                                  \n",
+              "(-1400.01, 700000.0]   238030  99.376678  238030   99.376678\n",
+              "(700000.0, 1400000.0]    1493   0.623322  239523  100.000000"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#Agregar una columna al DataFrame df\n",
+        "\n",
+        "k = 2 #Debe ingresar este valor\n",
+        "n = muestra_matricula #Debe ingresar este valor\n",
+        "d = 2 #Debe ingresar este valor\n",
+        "\n",
+        "df_matricula['Intervalos'] = pd.cut(df_matricula['VALOR MATRICULA (PESOS)'], bins = k, include_lowest= True, precision = d)\n",
+        "frecuencia_valor = df_matricula.groupby('Intervalos', observed = True).size()\n",
+        "\n",
+        "tabla_continua = pd.DataFrame({\n",
+        "    'fi': frecuencia_valor,\n",
+        "    'hi': (frecuencia_valor/n)*100,\n",
+        "    'Fi':frecuencia_valor.cumsum(),\n",
+        "    'Hi': ((frecuencia_valor/n) * 100).cumsum()\n",
+        "\n",
+        "})\n",
+        "tabla_continua #Puede indicar redondear con m cantidad de decimales round(tabla_continua,m)"
       ]
     },
     {
